# vos

./: .gitmodules  CMakeLists.txt  Cargo.toml  todo.md  vcpkg.json
.cmake/: PLib.cmake
app/: CMakeLists.txt
app/assets/: boot.lua  env.lua  init.lua  test.lua  test_script.lua
app/assets/home/doozyz/: env.lua
app/assets/scripts/: child.lua  main.lua
app/assets/sys/: debug.lua  files.lua  gui.lua  input.lua  libgui.lua  libio.lua  libsock.lua  libterm.lua  term.lua  terminal.lua
app/assets/sys/gui/: GuiTest.mgl  index.mgl  std.mgl  testing.mgl  types.mgl
app/src/: app.c  app.h  main.c
drivers/: CMakeLists.txt
drivers/mui/: mui_driver.c
drivers/sys/: bootstrap_driver.c  renderer.c  sys_driver.c  sys_driver.c.na  test_driver.c
drivers/win/: win_driver.c
libL/src/: lualib.h
muil/: CMakeLists.txt
muil/src/: main.c
muil/src/lib/: asserts.h  containers.h  defines.h  logger.c  logger.h  memory.c  memory.h  mutex.h  platform.c  platform.h  string.c  string.h
muil/src/lib/containers/: darray.c  darray.h  dict.c  dict.h  freelist.c  freelist.h  ptrhash.c  ptrhash.h  queue.c  queue.h  stack.c  stack.h
muil/src/lib/memory/: arena.h  dynamic_allocator.c  dynamic_allocator.h  linear_allocator.c  linear_allocator.h
muil/src/muil/: entry.h  lexer.c  lexer.h  parser.h
muil/src/old/muil/: muil.h  muil_delegate.c  muil_dump.h  muil_lexer.c  muil_parser.c  muil_parser.h
muil/src/old/muil/semantics/: semantics_reference.c  semantics_symbol.c  semantics_type_check.c
scripts/: test.lua
src/: lib.rs
src/kernel/: graphics_lib.rs  kern.rs  lua.rs  mod.rs  perms.rs  phost.rs  proc.rs  utils.rs  vfs.rs  window_manager.rs
src/kernel/sys/: mod.rs  win_proc.rs
src/user/: lua_runtime.rs  mod.rs
src/user/api/: graphics_api.rs  mod.rs  vfs_api.rs
src/utils/: mod.rs
tests/: test.lua
vos/: CMakeLists.txt
vos/assets/models/portal/: license.txt  scene.gltf
vos/assets/shaders/: shader.fs
vos/src/: defines.h
vos/src/containers/: Map.h  darray.c  darray.h  dict.c  dict.h  freelist.c  freelist.h  ptrhash.c  ptrhash.h  queue.c  stack.c  stack.h
vos/src/core/: asserts.h  event.c  event.h  ksemaphore.c  ksemaphore.h  logger.c  logger.h  mem.c  mem.h  str.c  str.h  timer.c  timer.h  vevent.c  vevent.h  vgui.c  vgui.h  vinput.c  vinput.h  vkeymap.c  vlogger.c  vlogger.h  vmem.c  vmem.h  vsemaphore.c  vstring.c  vstring.h  vtimer.c  vtimer.h
vos/src/filesystem/: paths.c  paths.h  vfs.c  vfs.h
vos/src/internal/kern/: event.c  kernel_ext.c  kernel_ext.h  lua.c  process.c
vos/src/kernel/: kernel.c  kernel.h  kresult.c  kresult.h  luahost.c  luahost.h  paths.c  paths.h  phost.c  phost.h  pmsg.h  proc.c  proc.h  process.h  vdriver.c  vdriver.h  vfs.c  vfs.h  vlexer.c  vlexer.h  vlua.c  vlua.h  vparser.c  vparser.h  vproc.c  vproc.h  vresult.c  vresult.h
vos/src/kernel/asset/: asset.c  asset.h  asset_watcher.c  asset_watcher.h  dir_asset.c  dir_asset.h  lua_asset.c  lua_asset.h
vos/src/kernel/vfs/: paths.c  paths.h  vfs.c  vfs.h  vfs_asset.h  vfs_watch.c  vfs_watch.h  vfswatch.c  vfswatch.h
vos/src/memory/: dynamic_allocator.c  dynamic_allocator.h  linear_allocator.c  linear_allocator.h
vos/src/muil/: muil.c  muil.h  muil_delegate.c  muil_dump.c  muil_dump.h  muil_ir.c  muil_ir.h  muil_lexer.c  muil_lexer.h  muil_parser.c  muil_parser.h  muil_sym.c  muil_sym.h  muil_visitor.c  muil_visitor.h  vlexer.c  vlexer.h  vmuil.c  vmuil.h  vparser.c  vparser.h
vos/src/muil/pass/: muil_pass.c  pass_symbol.c  pass_type.c
vos/src/muil/semantics/: semantics_delegate.c  semantics_reference.c  semantics_symbol.c  semantics_type_check.c
vos/src/platform/: platform.h  platform_linux.c  platform_mac.c  platform_win32.c
vos/src/public/: defines.h
vos/src/public/containers/: darray.c  dict.c  dict.h  queue.c  queue.h  stack.h
vos/src/public/core/: vevent.c  vevent.h  vgui.c  vgui.h  vkeymap.h  vmem.c  vmutex.h  vsemaphore.h  vstring.c  vstring.h  vthread.h  vtimer.h
vos/src/public/filesystem/: paths.c  paths.h  vfs.c  vfs.h
vos/src/public/kern/: event.c  kernel.c  kernel.h  kernel_internal.h  kutil.c  lua.c  process.c  vfs.c  vfs.h
vos/src/public/kernel/: kernel.c  kernel.h  proc.c  proc.h  vlua.h  vresult.c  vresult.h
vos/src/public/platform/: platform.h  platform_mac.c  platform_win32.c
vos/src/resource/: loaders.h  resource.c  resource.h
vos/src/resource/loaders/: binary_loader.c  folder_loader.c  image_loader.c  script_loader.c
