[package]
name = "vos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7.0"
serde = { version = "1.0.183", features = ["derive"] }
bincode = "1.3.3"
mlua = { version = "0.9.0-rc.3", features = ["lua54", "vendored"] }